# RPi-Shakebot

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  audio_test  test  todo.txt
cmake_modules/: FindFestival.cmake.txt
files/: greetings.txt  greetings_q.txt  search_q.txt  wiki_q.txt
src/: .main.cpp.swp  RestClient.cpp  RestClient.h  Shakebot.cpp  Shakebot.h  app.h  base64.h  main.cpp  rest_utils.cpp  rest_utils.h  sb.h  tests.cpp  tests.h
src/audio/: AudioClient.cpp  AudioClient.h  AudioDevice.cpp  AudioDevice.h  AudioRecorder.cpp  AudioRecorder.h  audio.cpp  audio.h  base64.cpp  flac.cpp  flac.h  record.cpp  record.h  speech.cpp  speech.h  speech_api.cpp  speech_api.h  voice.cpp  voice.h
src/cmd/: Command.cpp  Command.h  GreetingCommand.cpp  GreetingCommand.h  SearchCommand.cpp  SearchCommand.h  WikiCommand.cpp  WikiCommand.h  wiki_api.cpp  wiki_api.h
src/graphics/: .Graphics.cpp.swp  .Graphics.h.swp  Graphics.cpp  Graphics.h  RenderShakebot.cpp  RenderShakebot.h  graphics.cpp  graphics.h
src/net/: RestClient.cpp  RestClient.h  rest.h
